# FG

./: CHANGES  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  Walk.hpp  config.hpp  events.hpp  main.cpp  states.hpp  window.hpp
FG/: CMakeLists.txt  CONTROLS.txt  config.hpp  main.cpp  shaders.hpp
FG/models/: cube.hpp  floor.hpp
FG/models/fgscene/: fgfloor.hpp
FG/resources/shaders/: CMakeLists.txt  sth.frag  sth.vert
FG/scenes/: fg.hpp  landspace.hpp  rotatingCube.hpp
FGengine/: CMakeLists.txt  main.cpp
FGengine/mechanics/camRotation/: CMakeLists.txt  camRotation.cpp  camRotation.hpp
FGengine/mechanics/walking/: CMakeLists.txt  walking.cpp
FGengine/shaders/: shaderprogram.cpp
FGengine/structures/: color.hpp  point.hpp  vertex.hpp
FGengine/window/: window.cpp  window.hpp  windowBase.cpp
Main/: drawing.hpp  main.hpp
include/FGengine/: main.hpp
models/: cube.hpp  floor.hpp
objects/: camera.hpp  objects.hpp
objects/model/: buffer.hpp  model.hpp
objects/properties/: position.hpp
scenes/: buffer.hpp  scene.hpp
source/: config.hpp  main.cpp
source/main/: drawing.hpp  events.hpp  main.hpp
source/mechanics/: camRotation.hpp  walk.hpp
source/models/: cube.hpp  floor.hpp
source/objects/: camera.hpp
source/scenes/: buffer.hpp  scene.hpp  scene1.hpp
source/structures/: face.hpp  geometry.hpp  point.hpp  vertex.hpp
source/various/: loging.hpp
source/window/: window.hpp  windowBackend.hpp  windowBase.hpp  windowDraw.hpp  windowEvents.hpp  windowGeometry.hpp  windowScene.hpp  windowStates.hpp
source/windowsc/: window.hpp
src/: CMakeLists.txt  FGengine.hpp  events.hpp  main.cpp  main.hpp
src/mechanics/walking/: walking.hpp
src/objects/: CMakeLists.txt  objects.hpp
src/objects/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/objects/model/: CMakeLists.txt
src/objects/properties/: CMakeLists.txt
src/objects/properties/buffer/: buffer.cpp  buffer.hpp
src/objects/properties/transform/: transform.cpp  transform.hpp
src/scene/: scene.hpp
src/shaders/: CMakeLists.txt  shader.cpp  shaderprogram.cpp  shaderprogram.hpp  uniform.cpp
src/structures/: point.hpp  structures.hpp
src/window/: CMakeLists.txt  window.cpp  window.hpp  windowBase.cpp  windowBase.hpp
src/window/data/: flags.hpp  vsync.hpp
src/window/scene/: CMakeLists.txt  scene.cpp  windowScene.hpp
structures/: color.hpp  face.hpp  point.hpp  structures.hpp  vertex.hpp
(+52 files in other folders)
